<resources>
    <string name="app_name">Notifier</string>
    <string name="logout">Выйти</string>
    <string name="error">Ошибка</string>
    <string name="ok_demo">OK</string>
    <string name="no_internet">Отсуствует соединение</string>
    <string name="signin_vk">Войти через ВКонтакте</string>
    <string name="login_successful">Логин выполнен</string>
    <string name="login_failed">Ошибка логина</string>
    <string name="already_logged_in">Логин был выполнен ранее</string>
	
    <string name="shared_preferences_name">activity_settings</string>

    <string name="sp_name">activity_settings</string>
    <string name="time_freq_key">time_freq_key</string>

    <string name="time_from_to_key">time_from_to</string>
    <string name="time_from_key">time_from</string>
    <string name="time_to_key">time_to</string>

    <string name="time_from_default">00:00</string>
    <string name="time_to_default">00:00</string>



    <string name="time_from_hours">from_hours</string>
    <string name="time_from_minutes">from_minutes</string>
    <string name="time_to_hours">to_hours</string>
    <string name="time_to_minutes">to_minutes</string>

    <string name="minutes">минут</string>
    <string name="vibration_filler">Вибрация</string>
    <string name="settings_button_filler">Настройки</string>
    <string name="time_freq_filler">Частота проверки</string>
    <string name="time_interval_filler">Интервал выдачи уведомлений</string>
    <string name="time_from_to_filler">Присылать уведомления</string>
    <string name="time_from_filler">От</string>
    <string name="time_to_filler">До</string>

    <string name="BD_from_key">from</string>
    <string name="BD_to_key">to</string>
    <string name="BD_vibration_key">vibration</string>

</resources>
