<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <SwitchPreference

        android:key="@string/BD_vibration_key"
        android:title="@string/vibration_filler"
        />

    <ListPreference
        android:entries="@array/time_freq_arr"
        android:entryValues="@array/time_freq_values"
        android:key="@string/time_freq_key"
        android:title="@string/time_freq_filler"
        />

    <SwitchPreference
        android:key="@string/time_from_to_key"
        android:title="@string/time_from_to_filler"

        />

    <Preference
        android:key="@string/time_from_key"
        android:title="@string/time_from_filler"
        android:defaultValue="@string/time_from_default"
        />

    <Preference
        android:key="@string/time_to_key"
        android:title="@string/time_to_filler"
        android:defaultValue="@string/time_to_default"
        />


</PreferenceScreen>